[gd_scene load_steps=7 format=3 uid="uid://dc6ol2brls0e6"]

[ext_resource type="Script" path="res://microgame/match_weather/weather_main.gd" id="1_7saca"]
[ext_resource type="Texture2D" uid="uid://cu0hnrlykxqbj" path="res://Assets/Art/weather_background.jpg" id="2_w7ry1"]
[ext_resource type="Texture2D" uid="uid://7xq3cwp8il8w" path="res://Assets/Art/blue_button03.png" id="3_piypt"]
[ext_resource type="Texture2D" uid="uid://d3pnq2jsd0048" path="res://Assets/Art/blue_button13.png" id="4_cr7g0"]
[ext_resource type="PackedScene" uid="uid://dqt8uvi75xfh8" path="res://microgame/match_weather/weather_sprite.tscn" id="5_aldbu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_annwg"]
size = Vector2(60, 60)

[node name="weather_main" type="Node2D"]
script = ExtResource("1_7saca")
game_name = "Match the weather"
game_description = "match the weather icon to the description"
game_length = 20
message = "click+drag"

[node name="background_setup" type="Node2D" parent="."]

[node name="background" type="Sprite2D" parent="background_setup"]
z_index = -1
texture = ExtResource("2_w7ry1")
centered = false

[node name="Mon_box" type="Sprite2D" parent="background_setup"]
self_modulate = Color(0.151101, 0.399688, 1, 1)
position = Vector2(61, 201)
rotation = 1.5708
scale = Vector2(1.5, 2)
texture = ExtResource("3_piypt")

[node name="Label" type="Label" parent="background_setup/Mon_box"]
offset_left = -85.3333
offset_top = 19.5
offset_right = -45.3333
offset_bottom = 42.5
rotation = -1.5708
text = "MON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tue_box" type="Sprite2D" parent="background_setup"]
self_modulate = Color(0.151101, 0.399688, 1, 1)
position = Vector2(166, 201)
rotation = 1.5708
scale = Vector2(1.5, 2)
texture = ExtResource("3_piypt")

[node name="Label" type="Label" parent="background_setup/Tue_box"]
offset_left = -85.3333
offset_top = 19.5
offset_right = -45.3333
offset_bottom = 42.5
rotation = -1.5708
text = "TUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wed_box" type="Sprite2D" parent="background_setup"]
self_modulate = Color(0.151101, 0.399688, 1, 1)
position = Vector2(270, 201)
rotation = 1.5708
scale = Vector2(1.5, 2)
texture = ExtResource("3_piypt")

[node name="Label" type="Label" parent="background_setup/Wed_box"]
offset_left = -85.3333
offset_top = 19.5
offset_right = -45.3333
offset_bottom = 42.5
rotation = -1.5708
text = "WED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Thu_box" type="Sprite2D" parent="background_setup"]
self_modulate = Color(0.151101, 0.399688, 1, 1)
position = Vector2(370, 201)
rotation = 1.5708
scale = Vector2(1.5, 2)
texture = ExtResource("3_piypt")

[node name="Label" type="Label" parent="background_setup/Thu_box"]
offset_left = -85.3333
offset_top = 19.5
offset_right = -45.3333
offset_bottom = 42.5
rotation = -1.5708
text = "THU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fri_box" type="Sprite2D" parent="background_setup"]
self_modulate = Color(0.151101, 0.399688, 1, 1)
position = Vector2(477, 201)
rotation = 1.5708
scale = Vector2(1.5, 2)
texture = ExtResource("3_piypt")

[node name="Label" type="Label" parent="background_setup/Fri_box"]
offset_left = -85.3333
offset_top = 19.5
offset_right = -45.3333
offset_bottom = 42.5
rotation = -1.5708
text = "FRI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bottom_box" type="Sprite2D" parent="background_setup"]
modulate = Color(0.424931, 0.424931, 0.424931, 1)
self_modulate = Color(0, 0.0862745, 0.552941, 1)
position = Vector2(-18, 353)
scale = Vector2(3.03158, 1)
texture = ExtResource("4_cr7g0")
centered = false

[node name="top_text" type="Sprite2D" parent="background_setup"]
self_modulate = Color(1, 1, 0.737255, 1)
z_index = -1
position = Vector2(-3, 5)
scale = Vector2(1.05844, 0.234568)
texture = ExtResource("2_w7ry1")
centered = false
flip_v = true
region_enabled = true
region_rect = Rect2(48, 122, 462, 243)

[node name="New_Olympus" type="Label" parent="background_setup"]
z_index = -1
offset_left = 131.0
offset_top = -2.0
offset_right = 333.0
offset_bottom = 40.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 30
text = "New Fork City
"

[node name="extended forecast" type="Label" parent="background_setup"]
self_modulate = Color(1, 1, 0, 1)
z_index = -1
offset_left = 147.0
offset_top = 34.0
offset_right = 308.0
offset_bottom = 76.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 18
text = "Extended Forecast
"

[node name="date" type="Label" parent="background_setup"]
z_index = -1
offset_left = 381.0
offset_top = 12.0
offset_right = 467.0
offset_bottom = 61.0
theme_override_constants/line_spacing = -7
text = "Sunday
October 24"
horizontal_alignment = 2

[node name="logo" type="Sprite2D" parent="background_setup"]
self_modulate = Color(0, 1, 0.733333, 1)
z_index = -1
position = Vector2(54, 29.5)
scale = Vector2(0.431579, 1.22222)
texture = ExtResource("3_piypt")
metadata/_edit_group_ = true

[node name="logo text" type="Label" parent="background_setup"]
z_index = -1
offset_left = 16.0
offset_top = 3.0
offset_right = 92.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -6
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "The
CHANNEL
WEATHER"
vertical_alignment = 1

[node name="Sunny" type="Label" parent="."]
offset_left = 10.0
offset_top = 211.0
offset_right = 108.0
offset_bottom = 319.0
text = "Sunny
Hi	    Lo
32   23"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Sunny_Area2D" type="Area2D" parent="Sunny"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sunny/Sunny_Area2D"]
position = Vector2(51, -45)
shape = SubResource("RectangleShape2D_annwg")

[node name="Cloudy" type="Label" parent="."]
offset_left = 117.0
offset_top = 211.0
offset_right = 215.0
offset_bottom = 319.0
text = "Sunny
Hi	    Lo
32   23"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Cloudy_Area2D" type="Area2D" parent="Cloudy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cloudy/Cloudy_Area2D"]
position = Vector2(51, -45)
shape = SubResource("RectangleShape2D_annwg")

[node name="Partly Cloudy" type="Label" parent="."]
offset_left = 224.0
offset_top = 211.0
offset_right = 322.0
offset_bottom = 319.0
text = "Sunny
Hi	    Lo
32   23"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Partly_Cloudy_Area2D" type="Area2D" parent="Partly Cloudy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Partly Cloudy/Partly_Cloudy_Area2D"]
position = Vector2(51, -45)
shape = SubResource("RectangleShape2D_annwg")

[node name="Showers" type="Label" parent="."]
offset_left = 322.0
offset_top = 211.0
offset_right = 420.0
offset_bottom = 319.0
text = "Sunny
Hi	    Lo
32   23"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Showers_Area2D" type="Area2D" parent="Showers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Showers/Showers_Area2D"]
position = Vector2(51, -45)
shape = SubResource("RectangleShape2D_annwg")

[node name="Stormy" type="Label" parent="."]
offset_left = 427.0
offset_top = 211.0
offset_right = 525.0
offset_bottom = 319.0
text = "Sunny
Hi	    Lo
32   23"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_group_ = true

[node name="Stormy_Area2D" type="Area2D" parent="Stormy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stormy/Stormy_Area2D"]
position = Vector2(51, -45)
shape = SubResource("RectangleShape2D_annwg")

[node name="sunny_sprite" parent="." instance=ExtResource("5_aldbu")]
position = Vector2(63, 360)
scale = Vector2(0.7, 0.7)

[node name="cloudy_sprite" parent="." instance=ExtResource("5_aldbu")]
position = Vector2(482, 363)
scale = Vector2(0.7, 0.7)
region_rect = Rect2(23.673, 373.711, 100, 58.988)

[node name="partly_cloudy_sprite" parent="." instance=ExtResource("5_aldbu")]
position = Vector2(383, 366)
scale = Vector2(0.7, 0.7)
region_rect = Rect2(324.446, 39.217, 100, 70.8248)

[node name="showers_sprite" parent="." instance=ExtResource("5_aldbu")]
position = Vector2(282, 366)
scale = Vector2(0.7, 0.7)
region_rect = Rect2(176.954, 194.907, 96.1995, 88.263)

[node name="stormy_sprite" parent="." instance=ExtResource("5_aldbu")]
position = Vector2(172, 366)
scale = Vector2(0.7, 0.7)
region_rect = Rect2(474.916, 191.797, 100, 93.381)
